<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- General -->
    <string name="app_name">BlaBlaBlApp</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="logo">Logo</string>
    <string name="Image">Image</string>
    <string name="facebook_app_id">358465337681276</string>
	
	<!-- Pages titles -->
	<string name="Home">Home</string>
	<string name="Favorites">Favorites</string>
    <string name="Podcast">Podcast</string>
	<string name="About_Theo">About Theo</string>
	
    <!-- Menu -->
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
	<string name="refresh">Refresh</string>
	<string name="share">Share</string>
	<string name="share_title">Share with:</string>
	<string name="settings">Settings</string>
	
	<!--  Profile -->
	<string name="profile">Profile</string>
	<string name="signin">Sign in</string>
	<string name="signout">Sign out</string>
	<string name="login_dialog">Sign in using</string>
	<string name="login_username">Name</string>
	<string name="login_email">Email address</string>
	<string name="is_required">Cannot be left empty</string>
	<string name="invalid_email">Please enter a valid email address</string>
	<string name="login_signinManually">or enter your name and email address manually:</string>
	<string name="manuallyCreated_extraText">Change your profile name, email or picture. Or logout.</string>
			
	<!-- Post -->
    <string name="author_name">by %1$s</string>

	<!-- Error messages -->
    <string name="no_connection">Network not available</string>
    <string name="no_connection_dialog_title">Network not available</string>
    <string name="no_connection_dialog_message">Do you wish to continue?</string>
    <string name="unsupported_version_dialog_message">Unfortunately, you are using an outdated version of this app. Please update the app in the Play store.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
	<!-- Comments -->
	<plurals name="nrOfComments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
	<string name="leave_a_reply">Leave a comment</string>
	<string name="Post_comment_as">Post comment as</string>
	<string name="Post_reply_as">Post reply as</string>
	<string name="Reply_to">Reply to</string>
	<string name="comment">Comment</string>
	<string name="guest">Guest</string>
	<string name="post_error_no_name">Error while posting comment: no name registered in profile. Please login again.</string>
	<string name="post_error_invalid_email">Error while posting comment: the email address in your profile is invalid. Please login again with a valid email address.</string>
	<string name="post_error_exception">An unexpected error occurred while trying to post a comment</string>
	
	<!-- Notifications -->
	<string name="notify_new_posts">There are %d new posts</string>
	
	<!-- Settings -->
	<string name="pref_notifications">Notifications</string>
	<string name="pref_title_notify_new_posts">New blog posts</string>
	<string name="pref_title_notify_messages">Other messages</string>
	<string name="pref_sum_notify_messages">For example news messages</string>
	
	<string name="pref_storage">Storage</string>
	<string name="pref_title_use_storage">Store posts and images</string>
	<string name="pref_sum_use_storage">Needs to be enabled to use offline mode</string>
	<string name="pref_title_max_post_stored">Maximum posts stored on device</string>
	<string name="pref_sum_max_post_stored">Excluding favorites</string>

</resources>
