<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>
    
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    
    <item 
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share" 
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    
    <item 
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>