<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp" >
    
	    <TextView 
	        android:id="@+id/manuallyCreated_extraText"
	        android:layout_gravity="center"
	        android:layout_width="0dp"
	        android:layout_weight="1.2"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp" />
	    
	    <ImageView
	        android:id="@+id/manuallyCreated_profilePic"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:contentDescription="@string/Image" />
    
    </LinearLayout>

    <EditText
        android:id="@+id/manuallyCreated_username"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/login_username" />
    
    <EditText
        android:id="@+id/manuallyCreated_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/login_email"/>
    
</LinearLayout>